# smartbot

./: .gitignore  README.md
hand/: gimbal_device_simulator.py  manager.py  receive.py
link_uvc_ctrl/: .gitignore  CMakeLists.txt  RDK_README.md  V4L2_README.md
link_uvc_ctrl/include/: inference_utils.h  mqtt_utils.h  rdk_utils.h  uvc_utils.h
link_uvc_ctrl/src/: inference_utils.cpp  inference_utils_wudi1.cpp  main copy.cpp  main.cpp  main_v4l2 copy.cpp  main_v4l2.cpp  mqtt_utils.cpp  output.cpp  rdk_inference_demo.cpp  rdk_utils.cpp  rdk_utils_backup.cpp  rdk_utils_clean.cpp  uvc_utils.cpp
